# eFit

./: .gitignore  AGENTS.md  docker-compose.backend.yml  docker-compose.yml  package.json
backend/: .env.example  .gitignore  Dockerfile  RUN_BACKEND_LOCAL.md  alembic.ini  check_cat.py  excel_output.txt  pyproject.toml  requirements.txt  scratch_excel_to_md.py  scratch_read_excel.py  start.sh  test_gemini.py  test_introspection.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  i18n.py  security.py
backend/app/db/: session.py
backend/app/locales/: en.json  vi.json
backend/app/models/: auth.py  base.py  fitness.py  nutrition.py  nutrition_plan.py
backend/app/schemas/: base.py  client.py  daily_log.py  nutrition.py  nutrition_plan.py  response.py  session.py  user.py  workout.py
backend/app/scripts/: seed.py
backend/app/services/: ai.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0734ecdd68c7_add_auth_models.py  0ea9d917e388_add_diet_adherence_and_notes.py  1e017e7cc328_add_nutrition_models_foodcategory_and_.py  2832fb7517ad_add_dfi_fields_and_workout_schedule.py  2e974363a0e3_add_is_template_and_assigned_by_coach_id.py  33e0c2510563_initial_migration.py  46fc111c67f3_rebuild_session_phase_dailylog.py  5088b067b034_add_cardio_and_steps_to_dailylog.py  602cd111fddf_add_client_table_and_session_client_id.py  6791d8b723d3_add_base_fields_to_all_models.py  7210b178a508_add_chest_waist_hips_to_dailylog.py  7434728a92ef_add_profile_fields_to_user.py  (+7 more)
backend/scripts/: seed_nutrition.py
(+131 files in other folders)
