[project]
name = "efit-backend"
version = "1.0.0"
description = "AI-First Fitness Periodization System Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "sqlmodel>=0.0.19",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "python-dotenv>=1.0.1",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.0",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "B"]
ignore = []

[tool.ruff.isort]
known-first-party = ["app"]
